--- a/Javascript/package.json
+++ b/Javascript/package.json
@@ -9,7 +9,8 @@
     "clean": "lerna run clean",
     "lint": "lerna run lint",
     "test": "lerna run test",
-    "publish": "lerna publish",
+    "bump": "lerna version",
+    "publish": "lerna publish from-git",
     "check": "yarn clean && yarn compile && yarn test && yarn lint"
   },
   "devDependencies": {
