--- a/Javascript/packages/eslint-gen-config/package.json
+++ b/Javascript/packages/eslint-gen-config/package.json
@@ -6,6 +6,9 @@
   "bin": {
     "gen-config": "./src/index.js"
   },
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
@@ -21,5 +24,8 @@
   },
   "peerDependencies": {
     "eslint": "^5.5.0"
+  },
+  "dependencies": {
+    "jscodeshift": "^0.5.1"
   }
 }
