--- a/Javascript/lerna.json
+++ b/Javascript/lerna.json
@@ -1,9 +1,7 @@
 {
-  "packages": [
-    "packages/*",
-    "services/*"
-  ],
-  "npmClient": "yarn",
-  "useWorkspaces": true,
-  "version": "0.0.0"
+    "lerna": "3.4.0",
+    "packages": ["packages/*", "services/*"],
+    "npmClient": "yarn",
+    "useWorkspaces": true,
+    "version": "0.0.0"
 }
