--- a/packages/app-cli/package.json
+++ b/packages/app-cli/package.json
@@ -8,20 +8,27 @@
         "app": "./src/index.js"
     },
     "dependencies": {
-        "@li-kai/eslint-config-react": "^0.0.0",
         "@li-kai/babel-preset-react": "^0.0.0",
+        "@li-kai/eslint-config-react": "^0.0.0",
         "babel-loader": "^8.0.2",
+        "css-loader": "^1.0.0",
+        "eslint": "^5.5.0",
         "eslint-loader": "^2.1.1",
         "eslint-plugin-flowtype": "^2.50.0",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-jsx-a11y": "^6.1.1",
         "eslint-plugin-prettier": "^3.0.0",
         "eslint-plugin-react": "^7.11.1",
-        "eslint": "^5.5.0",
         "html-webpack-plugin": "^4.0.0-alpha.2",
+        "node-sass": "^4.9.3",
+        "postcss-flexbugs-fixes": "^4.1.0",
+        "postcss-loader": "^3.0.0",
+        "postcss-preset-env": "^6.0.10",
         "prettier": "^1.14.2",
-        "webpack-dev-server": "^3.1.8",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
         "webpack": "^4.19.1",
+        "webpack-dev-server": "^3.1.8",
         "yargs": "^12.0.2"
     },
     "devDependencies": {
